Sugati/src/objects/City_Place__c.object
<CustomObject>
    <description>TO DELETE</description>
    <fields>
        <fullName>CP_City_Code__c</fullName>
        <label>City Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Client_Notes__c</fullName>
        <label>Client Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CP_Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Cities / Places</relationshipLabel>
        <relationshipName>Cities_Places</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CP_Our_Opinion__c</fullName>
        <label>Our Opinion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CP_Quote__c</fullName>
        <label>Quote</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CP_Sales_Tips__c</fullName>
        <label>Sales Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CP_Web__c</fullName>
        <label>Web</label>
        <type>Url</type>
    </fields>
    <label>City / Place</label>
    <nameField>
        <label>City / Place Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities / Places</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>